# mcap2mat

./: .gitignore  README.md  pyproject.toml  requirements.txt
converter/: __init__.py  cli.py  config.py
converter/decoder/: __init__.py  binary_fallback.py  json_decoder.py  protobuf_decoder.py  registry.py
converter/io/: __init__.py  mcap_reader.py
converter/mat/: __init__.py  writer.py
converter/pipeline/: __init__.py  converter.py
data/: data1.mcap
tests/: mcap2mat.m  test_data1_conversion.py  test_pipeline.py  test_writer.py
